link para systech

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
     <footer>
         <div class="footer-content">
             <div class="footer-bottom">
-                <p>&copy; 2025 Icarus - Moda Masculina. Todos os direitos reservados.
-                <p class="text-footer"> Crie seu serviço on-line com a <a
-                        href="http://acessar.github.io/dezaincode.com.br" target="_blank">Dezaincode</a></p>
+                <p>&copy; 2025 Palmeiras Style - Moda Masculina. Todos os direitos reservados.
+                <p class="text-footer"> Crie seu serviço on-line com a <a href="https://Acessar.github.io/systech.com"
+                        target="_blank">Systech</a></p>
                 </p>
             </div>
         </div>
